feat: added the logic of only one unique digimon

--- a/digimon/src/components/Digimons/style.css
+++ b/digimon/src/components/Digimons/style.css
@@ -1,8 +1,11 @@
 
 .digimons{
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .digimons ul{
+    padding: 0px;
     display: flex;
     flex-direction: column;
     list-style: none;
